Fix squished fell

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -34,12 +34,25 @@
 
 .title {
     // "text-5xl font-bold"
+    line-height: 1;
     font-size: 3rem;
     font-weight: 700;
 }
 
+.subtitle {
+    margin: 1rem 0;
+}
+
 .titleBox {
     margin-left: 3rem;
+    font-size: 1rem;
+}
+
+.howItWorks {
+    // "text-xl font-bold mb-2"
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
 }
 
 @media (max-width: 560px) {
@@ -49,14 +62,27 @@
 
     .logo {
         margin: 1rem;
-        height: 40%;
+        height: 96px;
     }
 
     .title {
-        font-size: 2.5rem;
+        font-size: 1.75rem;
     }
 
     .titleBox {
-        margin: 1rem;
+        font-size: 0.75rem;
+        margin: 2rem;
+    }
+
+    .description {
+        font-size: 0.75rem;
+    }
+
+    .explanation {
+        font-size: 0.75rem;
+    }
+
+    .bottom-container {
+        margin-bottom: 1rem;
     }
 }
